--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/firebase": "^3.2.1",
+    "@types/markdown-to-jsx": "^7.0.1",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^9.8.1",
+    "markdown-to-jsx": "^7.1.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-markdown": "^8.0.3",
+    "react-remark": "^2.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
